--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "echarts": "^4.7.0",
     "element-ui": "^2.4.5",
     "vue": "^2.5.22",
     "vue-router": "^3.0.1",
